--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,21 +1,18 @@
-on: [push, pull_request]
-name: Test
+name: 🙏🏻 Lint Test
+on:
+  pull_request:
+  workflow_dispatch:
+
 jobs:
-  test:
-    strategy:
-      matrix:
-        go-version: [1.14.x, 1.15.x]
+  lint:
+    name: Lint Test
     runs-on: ubuntu-latest
     steps:
-    - name: Install Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go-version }}
-    - name: Checkout code
-      uses: actions/checkout@v2
-    - name: golangci-lint
-      uses: golangci/golangci-lint-action@v2
-      with:
-        version: v1.32
-    - name: Test
-      run: go test ./...
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@v3
+        with:
+          version: latest
+          args: --timeout 5m
+          working-directory: .
